<resources>

    <string name="app_name" translatable="false">Go4Lunch</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="PREFERENCES" translatable="false">preferences</string>
    <string name="NOTIFICATION" translatable="false">notification</string>
    <string name="NOTIFICATION_ENABLED" translatable="false">notification_enabled</string>
    <string name="NOTIFICATION_DISABLED" translatable="false">notification_disabled</string>

    <!-- Facebook api id -->
    <string name="facebook_application_id" translatable="false">590265162119569</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb590265162119569</string>

    <!-- Twitter api id -->
    <string name="twitter_api_id" translatable="false">IBSpd6UovqQdGOTlGYnL7J6AT</string>
    <string name="twitter_api_secret_id" translatable="false">wT1oHSq6OdD6VL4oZo91YfltMGC9Mtz3XrQCtmwR042YUAVMEu</string>

    <!-- MainActivity -->
    <string name="main_activity_map_view_page">Map View</string>
    <string name="main_activity_list_view_page">List View</string>
    <string name="main_activity_workmates_page">Workmates List</string>
    <string name="main_activity_selected_restaurant_dialog">"Your restaurant choice is:"</string>
    <string name="main_activity_settings_title">Settings</string>
    <string name="main_activity_signout_confirmation_title">Sign out ?</string>
    <string name="main_activity_signout_confirmation_content_message">Are you sure?</string>
    <string name="main_activity_signout_confirmation_positive_btn">OK</string>
    <string name="main_activity_signout_confirmation_negative_btn">CANCEL</string>
    <string name="main_activity_no_restaurant_selected">Choose a restaurant.</string>
    <string name="main_activity_alert_dialog_title">Do you want to quit?</string>

    <!-- Navigation drawer menu strings -->
    <string name="navigation_drawer_menu_lunch">YOUR LUNCH</string>
    <string name="navigation_drawer_menu_settings">SETTINGS</string>
    <string name="navigation_drawer_menu_logout">LOGOUT</string>

    <!-- Toolbar title strings -->
    <string name="toolbar_title_hungry">I\'m Hungry!</string>

    <!-- Toolbar menu strings -->
    <string name="toolbar_menu_search_button">Search</string>
<<<<<<< HEAD
    <string name="toolbar_menu_filter_button">Filter</string>
=======
>>>>>>> f0c8bfb

    <!-- LoginActivity strings -->
    <string name="login_activity_twitter_sign_in">sign in with Twitter</string>
    <string name="login_activity_facebook_sign_in">Sign in with Facebook</string>
    <string name="login_activity_google_sign_in">Sign in with Google</string>
    <string name="login_activity_error_authentication_canceled">Authentication canceled</string>
    <string name="login_activity_connection_succeed">connection succeed</string>
    <string name="login_activity_error_no_internet">Error no internet connection</string>
    <string name="login_activity_error_unknow_error">Unknow error</string>


    <!-- DetailActivity strings -->
    <string name="detail_activity_fab_content_description">Select a restaurant</string>
    <string name="detail_activityl_call_text">CALL</string>
    <string name="detail_activityl_like_text">LIKE</string>
    <string name="detail_activityl_website_text">WEBSITE</string>
    <string name="detail_activity_no_friend_tv">no friend come</string>

    <!-- DetailViewHolder strings -->
    <string name="detail_viewHolder_is_joining">is joining</string>

    <!-- WorkmatesViewHolder strings -->
    <string name="workmates_list_view_holder_no_details_here">No details here</string>
    <string name="workmates_list_view_holder_not_decided">hasn\'t decided yet</string>
    <string name="workmates_list_view_holder_is_eating_at">is eating at</string>

    <!-- ListViewHolder strings -->
    <string name="list_view_holder_open_at">open at</string>
    <string name="list_view_holder_until">until</string>
    <string name="list_view_holder_still_open_until">still open until</string>
    <string name="list_view_holder_still_closed">still closed</string>
    <string name="list_view_holder_am">am</string>
    <string name="list_view_holder_pm">pm</string>

    <!-- Preference strings -->
    <string name="preference_notifications">notifications</string>
    <string name="preference_enable_notifications">Enable message notifications</string>
    <string name="preference_setting_title">Setting menu</string>
    <string name="preference_setting_enable_notification">Enable notification</string>
    <string name="preference_setting_delete_account">Delete account</string>
    <string name="preference_popup_title_delete_account">Delete your account ?</string>
    <string name="preference_notification_enabled">notification_enabled</string>
    <string name="preference_popup_account_deleted">Account deleted</string>
    <string name="preference_popup_title_quit_app">Quit Go4Lunch?</string>
    <string name="preference_delete_account">Delete your account:</string>
    <string name="preference_need_to_logout">You need to reconnect and press delete account again.</string>
    <string name="preference_logout">logout</string>

    <!-- PushNotificationService strings -->
    <string name="push_notification_service_alert">It\'s 12am</string>
    <string name="push_notification_service_restaurant_choice">You have chosen to eat at</string>
    <string name="push_notification_service_list_of_friend_are_come">Friends that come with you:</string>
    <string name="push_notification_service_nobody_come">you are alone.</string>

    <!-- MapViewRepository -->
    <string name="map_view_repository_still_closed">still closed</string>
    <string name="map_view_repository_open_until">open until</string>
    <string name="map_view_repository_open_at">open at</string>
    <string name="map_view_repository_hour">pm</string>
    <string name="map_view_fragment_search_canceled">Search canceled</string>
    <string name="toolbar_menu_filer_button">Filter</string>
    <string name="sort_menu_friend_ascending">Interested ascending</string>
    <string name="sort_menu_friend_descending">Interested descending</string>
    <string name="sort_menu_rating_ascending">Rating ascending</string>
    <string name="sort_menu_rating_descending">Rating descending</string>
    <string name="sort_menu_distance_ascending">Distance ascending</string>
    <string name="sort_menu_distance_descending">Distance descending</string>
    <string name="sort_menu_favorite_ascending">Favorite ascending</string>
    <string name="sort_menu_favorite_descending">Favorite descending</string>
    <string name="sort_menu_searched_ascending">Searched ascending</string>
    <string name="sort_menu_searched_descending">Searched descending</string>

</resources>