<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:id="@+id/preference_setting_container"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/preference_setting_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/preference_setting_title"
        android:textSize="@dimen/preference_setting_title"
        android:textColor="?attr/text_color"
        android:layout_margin="@dimen/preference_setting_title_margin"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/preference_setting_notification_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/preference_setting_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/preference_setting_enable_notification"
        android:textSize="@dimen/preference_setting_normal_text_size"
        android:textColor="?attr/text_color"
        android:layout_marginHorizontal="@dimen/preference_setting_title_margin"
        android:layout_marginTop="@dimen/preference_setting_margin_top"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/preference_setting_notification_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/preference_setting_title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/preference_setting_title_margin"
        android:layout_marginTop="@dimen/preference_setting_margin_top"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/preference_setting_delete_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/preference_setting_notification_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/preference_setting_delete_account"
        android:textSize="@dimen/preference_setting_normal_text_size"
        android:textColor="?attr/text_color"
        android:layout_marginHorizontal="@dimen/preference_setting_title_margin"
        android:layout_marginTop="@dimen/preference_setting_margin_top"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/preference_setting_delete_account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/preference_setting_notification_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/preference_setting_title_margin"
        android:layout_marginTop="@dimen/preference_setting_margin_top"
        android:background="@drawable/ic_delete"
        android:padding="@dimen/preference_setting_img_btn_padding"/>

</androidx.constraintlayout.widget.ConstraintLayout>