<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.DetailFragment"
    android:id="@+id/activity_detail_container">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/activity_detail_image_header"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_detail_fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/activity_detail_image_header"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-30dp"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/ic_baseline_check_circle_outline_24"
        app:fabCustomSize="56dp"
        app:maxImageSize="36dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/detail_activity_fab_content_description" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/activity_detail_layout_primary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_image_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="250dp"
        android:orientation="vertical">

        <!-- Restaurant details -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="?attr/decoration_color">

            <!-- Name, Rating, Type & Address container -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/activity_detail_restaurant_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/activity_detail_restaurant_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/decoration_text_color"
                    android:textSize="26sp"
                    android:layout_marginTop="10dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/activity_detail_first_rating_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/baseline_star_rate_black_24"
                    android:layout_marginVertical="16dp"
                    android:layout_marginStart="10dp"/>


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/activity_detail_second_rating_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/baseline_star_rate_black_24"
                    android:layout_marginVertical="16dp"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/activity_detail_third_rating_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/baseline_star_rate_black_24"
                    android:layout_marginVertical="16dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/activity_detail_restaurant_type_and_adress_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/activity_detail_restaurant_info_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="?attr/decoration_text_color"
                android:textSize="16sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="44dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- BUTTON CONTAINER -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/activity_detail_button_container"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:background="?attr/background_color">

            <!-- CALL CONTAINER -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="33">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/activity_detail_call_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@android:color/transparent"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/activity_detail_call_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_call"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/activity_detail_call_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/activity_detail_call_img"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_activityl_call_text"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="?attr/text_color"
                    android:background="@android:color/transparent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- LIKE CONTAINER -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="33">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/activity_detail_like_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@android:color/transparent"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/activity_detail_like_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_star_outline" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/activity_detail_like_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/activity_detail_like_img"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_activityl_like_text"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="?attr/text_color"
                    android:background="@android:color/transparent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- WEBSITE CONTAINER -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="33">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/activity_detail_website_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@android:color/transparent"
                    android:src="@drawable/baseline_star_border_24"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/activity_detail_website_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_public"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/activity_detail_website_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/activity_detail_website_img"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_activityl_website_text"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="?attr/text_color"
                    android:background="@android:color/transparent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_detail_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/list_view_row"
            android:background="?attr/background_color"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>